--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-select": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
